Implemented create Chapter and save and load them in the JTable

--- a/Exercises/Serialisation/VergeflixSerializacion/src/interfaz/JDGestionarTemporada.form
+++ b/Exercises/Serialisation/VergeflixSerializacion/src/interfaz/JDGestionarTemporada.form
@@ -39,11 +39,16 @@
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="jtfFechaEstreno" min="-2" pref="101" max="-2" attributes="0"/>
                   </Group>
-                  <Group type="102" attributes="0">
+                  <Group type="102" alignment="0" attributes="0">
                       <EmptySpace min="-2" pref="35" max="-2" attributes="0"/>
-                      <Component id="jbActualizar" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace max="32767" attributes="0"/>
-                      <Component id="jbCancelar" min="-2" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="0" attributes="0">
+                          <Component id="jbCrearCapitulo" min="-2" max="-2" attributes="0"/>
+                          <Group type="102" attributes="0">
+                              <Component id="jbActualizar" min="-2" max="-2" attributes="0"/>
+                              <EmptySpace max="32767" attributes="0"/>
+                              <Component id="jbCancelar" min="-2" max="-2" attributes="0"/>
+                          </Group>
+                      </Group>
                   </Group>
               </Group>
               <EmptySpace pref="44" max="32767" attributes="0"/>
@@ -70,6 +75,8 @@
                           <Component id="jlTituloFechaEstreno" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="jtfFechaEstreno" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
+                      <EmptySpace min="-2" pref="26" max="-2" attributes="0"/>
+                      <Component id="jbCrearCapitulo" min="-2" max="-2" attributes="0"/>
                       <EmptySpace max="32767" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
                           <Component id="jbActualizar" alignment="3" min="-2" max="-2" attributes="0"/>
@@ -138,6 +145,14 @@
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jbCancelarActionPerformed"/>
+      </Events>
+    </Component>
+    <Component class="javax.swing.JButton" name="jbCrearCapitulo">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Crear Capitulo"/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jbCrearCapituloActionPerformed"/>
       </Events>
     </Component>
   </SubComponents>
